apps/overlays/dev/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: dev.cyrus-ag.com
      http:
        paths:
          # --- REGLE BLACKHOLE POUR BLOQUER TOUTE LA DOCUMENTATION /DOCS ---
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: ingress-blackhole
                port:
                  number: 80
          # --- REGLE GENERIQUE POUR REDIRIGER LE RESTE DE L'API ---
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
---
# Service Blackhole qui ne pointe vers aucun Pod (renvoie un 503/404 immédiat)
apiVersion: v1
kind: Service
metadata:
  name: ingress-blackhole
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 9999
